--- a/index.html
+++ b/index.html
@@ -97,21 +97,38 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>The most insane competition in Europe.</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h4>TODO: COMPLETE THIS SECTION</h4>
+                <p>
+                    The HackaSoton Global is the annual HackaGlobal hackathon, where  Europe's best hackers from HackaCities around the world come together to build the most insane hacks ever seen!
+                </p>
+
+                <p>
+                    This year we will have attendees from Moscow, St. Petersburg, Poznan, Timisoara, Brasov, Cologne, and many, Many other parts of the world! We will be helping out with visas, offering free accomodation, and if sponsorship allows, paying for flights for all participants!
+                </p>
+
+                <p>
+                    Awesome Speakers, Incredible Mentors, <strong>amazing new technology</strong> and <strong>Free</strong> Food and Drink - We will have every essential tool you will need to achieve the impossible: Create a fully functional, scalable, and monetizable StartUp in less than 48 hours.
+                </p>
+
+                <p>
+                    Crazy? Maybe! Impossible? Not even close! Many individuals created Revolutionary Concepts in our past <a href="http://southampton.startupweekend.org/">Startup Bus 2014</a>, Incredible StartUps at our <a href="http://moscow.startupweekend.org/">Startup Weekend in Moscow</a> and Mind Blowing Hacks at our <a href="http://www.summerhacks.org/">Summerhacks in Romania</a>.
+                </p>
+
+                <p>
+                    This is your opportunity to take the leap into the amazing world of hackathons! Come <strong>join us</strong> in this incredible experience - we assure you that you won't regret it!
+                </p>
             </div>
         </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="apply" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Apply now!</h2>
+                    <p>Applications will open soon.</p>
+                    <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg">Stay tuned!</a>
                 </div>
             </div>
         </div>
@@ -121,19 +138,16 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Us</h2>
+                <p>Feel free to email if you have any questions! We're looking forward to hear from you!</p>
+                <p><a href="mailto:axsauze@gmail.com">hello@trainhack.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/TrainHack" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@TrainHacks</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                 </ul>
             </div>
