--- a/index.html
+++ b/index.html
@@ -59,10 +59,19 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#speakers">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#speakers">Speakers</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#speakers">Judges</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll btn btn-info" href="#apply">Apply Now!</a>
                     </li>
                 </ul>
             </div>
@@ -127,8 +136,8 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Apply now!</h2>
-                    <p>Applications will open soon.</p>
-                    <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg">Stay tuned!</a>
+                    <p>OH HAI</p>
+                    <p>INSERT BEAUTIFUL TYPEFORM HERE.</p>
                 </div>
             </div>
         </div>
