added skeleton for all other sections

--- a/index.html
+++ b/index.html
@@ -59,16 +59,22 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#speakers">Sponsors</a>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#speakers">Judges</a>
+                        <a class="page-scroll" href="#judges">Judges</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#trainhackers">TrainHackers</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#map">Location</a>
                     </li>
                     <li>
                         <a class="page-scroll btn btn-info" href="#apply">Apply Now!</a>
@@ -108,7 +114,7 @@
                 <h2>The most insane competition in Europe.</h2>
                 <h4>TODO: COMPLETE THIS SECTION</h4>
                 <p>
-                    The HackaSoton Global is the annual HackaGlobal hackathon, where  Europe's best hackers from HackaCities around the world come together to build the most insane hacks ever seen!
+                    TrainHacks is the first ever, and biggest hackahton on a train in Europe! 100 of the best developers from all around Europe will be revolutionizing the world while hacking on a train!
                 </p>
 
                 <p>
@@ -130,21 +136,74 @@
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="apply" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Apply now!</h2>
-                    <p>OH HAI</p>
-                    <p>INSERT BEAUTIFUL TYPEFORM HERE.</p>
-                </div>
+    <!-- Sponsors Section -->
+    <section id="sponsors" class="content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Sponsors!</h2>
+                <p>
+                    Thanks to all our awesome sponsors!
+                </p>
+                <p>
+                    Thanks to all our awesome sponsors!
+                </p>
+                <p>
+                    Thanks to all our awesome sponsors!
+                </p>
+                <p>
+                    Thanks to all our awesome sponsors!
+                </p>
+                <p>
+                    Thanks to all our awesome sponsors!
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Speakers Section -->
+    <section id="speakers" class="content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Speakers</h2>
+                <p>The people speaking.</p>
+                <p>The people speaking.</p>
+                <p>The people speaking.</p>
+                <p>The people speaking.</p>
+                <p>The people speaking.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Judges Section -->
+    <section id="judges" class="content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Judges</h2>
+                <p>The people judging.</p>
+                <p>The people judging.</p>
+                <p>The people judging.</p>
+                <p>The people judging.</p>
+                <p>The people judging.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- 2014 Trainhackers Section -->
+    <section id="trainhackers" class="content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>The 2015 TrainHackers</h2>
+                <p>The people participating.</p>
+                <p>The people participating.</p>
+                <p>The people participating.</p>
+                <p>The people participating.</p>
+                <p>The people participating.</p>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="team" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Us</h2>
