--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li>
                         <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
@@ -72,7 +72,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#map">Location</a>
                     </li>
@@ -96,7 +96,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Trainhacks</h1>
+                        <img class="light" style="width: 70%" src="img/white-trainhack-logo.png"/>
                         <p class="intro-text">The top 100 developers, designers and entrepreneurs will revolutionize the world, at the first ever train hackathon in Europe.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -136,32 +136,16 @@
         </div>
     </section>
 
-    <!-- Sponsors Section -->
     <section id="sponsors" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Sponsors!</h2>
-                <p>
-                    Thanks to all our awesome sponsors!
-                </p>
-                <p>
-                    Thanks to all our awesome sponsors!
-                </p>
-                <p>
-                    Thanks to all our awesome sponsors!
-                </p>
-                <p>
-                    Thanks to all our awesome sponsors!
-                </p>
-                <p>
-                    Thanks to all our awesome sponsors!
-                </p>
+                <h4><a href="#team">Become a sponsor</a></h4>
             </div>
         </div>
     </section>
 
-    <!-- Speakers Section -->
-    <section id="speakers" class="content-section text-center">
+    <!-- <section id="speakers" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Speakers</h2>
@@ -174,7 +158,6 @@
         </div>
     </section>
 
-    <!-- Judges Section -->
     <section id="judges" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -188,7 +171,6 @@
         </div>
     </section>
 
-    <!-- 2014 Trainhackers Section -->
     <section id="trainhackers" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -200,9 +182,34 @@
                 <p>The people participating.</p>
             </div>
         </div>
+    </section> -->
+
+    <section id="apply" class="content-section text-center">
+        <div class="row">
+                <h1>Apply now!</h1>
+                <div class="typeform-widget" data-url="https://axsauze.typeform.com/to/GFChYr" data-text="TrainHacks" style="width:100%;height:700px;"></div>
+                <script>
+                (function() {
+                    var qs, js, q, s, d = document,
+                        gi = d.getElementById,
+                        ce = d.createElement,
+                        gt = d.getElementsByTagName,
+                        id = 'typef_orm',
+                        b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+
+                    if (!gi.call(d, id)) {
+                        js = ce.call(d, 'script');
+                        js.id = id;
+                        js.src = b + 'widget.js';
+                        q = gt.call(d, 'script')[0];
+                        q.parentNode.insertBefore(js, q)
+                    }
+                })()
+                </script>
+                <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_GFChYr&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
+        </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="team" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -222,16 +229,12 @@
         </div>
     </section>
 
-    <!-- Map Section -->
     <div id="map"></div>
 
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
