finaly fixed the jump

--- a/index.html
+++ b/index.html
@@ -195,7 +195,16 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                 <h2>MEET THE TEAM!</h2>
-                <p>Feel free to email if you have any questions! We're looking forward to hear from you!</p>
+                
+                <ul class="list-inline banner-social-buttons col-sm-12">
+                    <li class="col-sm 6">
+                        <a href="https://twitter.com/TrainHack" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@ TrainHacks</span></a>
+                    </li>
+
+                    <li class="col-sm 6">
+                        <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg col-sm 6"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">/ Trainhacks</span></a>
+                    </li>
+                </ul>
                 <div class="organizer col-md-6">
                     <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.png" alt="River Tam"/></a>
                     <h2 itemprop="name">River Tam<br></h2>
