added description content

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <img class="light" style="width: 70%" src="img/white-trainhack-logo.png"/>
-                        <p class="intro-text">The top 100 developers, designers and entrepreneurs will revolutionize the world, at the first ever train hackathon in Europe.</p>
+                        <p class="intro-text">27th March - 29th March</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -110,25 +110,24 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>The most insane competition in Europe.</h2>
-                <h4>TODO: COMPLETE THIS SECTION</h4>
                 <p>
-                    TrainHacks is the first ever, and biggest hackahton on a train in Europe! 100 of the best developers from all around Europe will be revolutionizing the world while hacking on a train!
+                    TrainHacks is the first ever train in Europe! An exrteme, out of this world hackathon where the top developers from all around Europe will come together to revolutionizing the world whilst travelling to the top tech cities in the UK!
                 </p>
 
                 <p>
-                    This year we will have attendees from Moscow, St. Petersburg, Poznan, Timisoara, Brasov, Cologne, and many, Many other parts of the world! We will be helping out with visas, offering free accomodation, and if sponsorship allows, paying for flights for all participants!
+                    A massive launch party, an unforgettable journey, incredible individuals, and uncountable mind blowing surprises are just a few of the quirks that the HackTrain will have on board! 
                 </p>
 
                 <p>
-                    Awesome Speakers, Incredible Mentors, <strong>amazing new technology</strong> and <strong>Free</strong> Food and Drink - We will have every essential tool you will need to achieve the impossible: Create a fully functional, scalable, and monetizable StartUp in less than 48 hours.
+                    Prototypes will be created and presented it in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of finding the 2015 HackTrain champion! With attendees from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly be an unforgettable experience!
                 </p>
 
                 <p>
-                    Crazy? Maybe! Impossible? Not even close! Many individuals created Revolutionary Concepts in our past <a href="http://southampton.startupweekend.org/">Startup Bus 2014</a>, Incredible StartUps at our <a href="http://moscow.startupweekend.org/">Startup Weekend in Moscow</a> and Mind Blowing Hacks at our <a href="http://www.summerhacks.org/">Summerhacks in Romania</a>.
+                    Crazy? Maybe! Impossible? Not even close! Many individuals created Revolutionary Concepts in our past <a href="http://uk.startupbus.org/">Startup Bus 2014</a>, Incredible StartUps at our <a href="http://moscow.startupweekend.org/">Startup Weekend in Moscow</a> and Mind Blowing Hacks at our <a href="http://www.summerhacks.org/">Summerhacks in Romania</a>.
                 </p>
 
                 <p>
-                    This is your opportunity to take the leap into the amazing world of hackathons! Come <strong>join us</strong> in this incredible experience - we assure you that you won't regret it!
+                    This is your opportunity to take the leap into the amazing world of hackathons! Come <strong>join us</strong> in this incredible journey - we assure you that you won't regret it!
                 </p>
             </div>
         </div>
