--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <img class="light" style="width: 70%" src="img/white-trainhack-logo.png"/>
-                        <p class="intro-text">The top 100 developers, designers and entrepreneurs will revolutionize the world, at the first ever train hackathon in Europe.</p>
+                        <p class="intro-text">The top 40 developers, designers and entrepreneurs will revolutionize the world, at the first ever train hackathon in Europe.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -109,18 +109,17 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>The most insane competition in Europe.</h2>
-                <h4>TODO: COMPLETE THIS SECTION</h4>
+                <h2>An Experience Like No Other.</h2>
                 <p>
-                    TrainHacks is the first ever, and biggest hackahton on a train in Europe! 100 of the best developers from all around Europe will be revolutionizing the world while hacking on a train!
+                    TrainHacks is the first ever hackahton to take place on a train in Europe! 40 of the best developers from all around Europe will be revolutionizing the world while hacking on a train!
                 </p>
 
                 <p>
-                    This year we will have attendees from Moscow, St. Petersburg, Poznan, Timisoara, Brasov, Cologne, and many, Many other parts of the world! We will be helping out with visas, offering free accomodation, and if sponsorship allows, paying for flights for all participants!
+                    Participants will be travelling from London all the way to Edinburgh in First Class thanks to our amazing partners: East Midlands Trains and Virgin Trains East Coast.
                 </p>
 
                 <p>
-                    Awesome Speakers, Incredible Mentors, <strong>amazing new technology</strong> and <strong>Free</strong> Food and Drink - We will have every essential tool you will need to achieve the impossible: Create a fully functional, scalable, and monetizable StartUp in less than 48 hours.
+                    We will have various inspirational speakers, incredible mentors, <strong>amazing new technology to hack with</strong> and <strong>Free</strong> Food and Drink!
                 </p>
 
                 <p>
