Added images, all colors the same

--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
                     This is your opportunity to take the leap into the amazing world of hackathons! Come <strong>join us</strong> in this incredible journey - we assure you that you won't regret it!
                 </p>
             </div>
+            
+            <ul class="list-inline banner-social-buttons col-sm-12">
+                <li class="col-sm-6">
+                    <a href="https://twitter.com/TrainHack" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@ TrainHacks</span></a>
+                </li>
+
+                <li class="col-sm-6">
+                    <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg col-sm 6"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">/ Trainhacks</span></a>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -199,41 +209,49 @@
         <div class="row">
             <div class="col-sm-12">
                 <h2>MEET THE TEAM!</h2>
-                
-                <ul class="list-inline banner-social-buttons col-sm-12">
-                    <li class="col-sm-6">
-                        <a href="https://twitter.com/TrainHack" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@ TrainHacks</span></a>
-                    </li>
-
-                    <li class="col-sm-6">
-                        <a href="https://facebook.com/TrainHack" class="btn btn-default btn-lg col-sm 6"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">/ Trainhacks</span></a>
-                    </li>
-                </ul>
                 <div class="organizer col-md-4">
-                    <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.png" alt="River Tam"/></a>
+                    <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.jpg" alt="River Tam"/></a>
                     <h2 itemprop="name">River Tam<br></h2>
-                    <ul itemprop="description">
+                    <ul itemprop="description" class="organizer-description">
                         <li>Has won 8 out of 9 hackathons attended.</li>
                         <li>Programme Manager at Dotforge Accelerator.</li>
                         <li>Co-Founder of StartupHacks.</li>
                     </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:river@hacktrain.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">River@HackTrain.com</span></a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="organizer col-md-4">
-                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/alejandro.png" alt="Alejandro Saucedo"/></a>
+                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/alejandro.jpg" alt="Alejandro Saucedo"/></a>
                     <h2 itemprop="name">Alejandro Saucedo</h2>
-                    <ul itemprop="description">
+                    <ul itemprop="description" class="organizer-description">
                         <li>Has organized 20+ hackathons around the world.</li>
                         <li>Founder at HackaGlobal and Software Developer at Bloomberg LP.</li>
                         <li>Had the opportunity to meet Cameron and to discuss entrepreneurial matters with the Duke of York.</li>
                     </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:alejandro@hacktrain.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@ Ale@HackTrain.com</span></a>
+                        </li>
+                    </ul>
+                    </ul>
                 </div>
                 <div class="organizer col-md-4">
-                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/sally.jpg" alt="Sally Kuok"/></a>
+                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/sally.jpg" alt="Sally Kuok"/></a>
                     <h2 itemprop="name">Sally Kuok</h2>
-                    <ul itemprop="description">
-                        <li>Has won 8 out of 9 hackathons attended.</li>
-                        <li>Programme Manager at Dotforge Accelerator.</li>
-                        <li>Organised three very high level hackathons (Startup Hacks #1, Startup Hacks #2, StartupBus UK 2014).</li>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Winner of the Startup Weekend Singapour.</li>
+                        <li>AIESEC Leader.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:sally@hacktrain.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Sally@HackTrain.com</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -259,7 +277,7 @@
                 <h2 class="timeline-time"><span>27th March - Kick Startin'</span></h2>
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="robots" class="timeline-event"><a>18:00 - HackTrain London Launch</a></dt>
+                    <dt id="robots" class="timeline-event"><a>17:00 - HackTrain London Launch</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="robotsEX">
                         <div class="media">
@@ -275,7 +293,7 @@
                 </dl><!-- /.timeline-series -->
                 <dl class="timeline-series">
                     <span class="tick tick-before"></span>
-                    <dt id="hacking" class="timeline-event"><a>20:00 - Hacking begins!</a></dt>
+                    <dt id="hacking" class="timeline-event"><a>20:00 - Train to Sheffield!</a></dt>
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="hackingEX">
 
@@ -284,9 +302,9 @@
                         </blockquote>
 
                     <br class="clear">
-                    </dd><!-- /.timeline-event-content -->
-                </dl><!-- /.timeline-series -->
-            </div><!-- /.timeline-wrapper -->
+                    </dd>
+                </dl>
+            </div>
 
 
             <div class="timeline-wrapper">
@@ -297,8 +315,7 @@
                     <span class="tick tick-after"></span>
                     <dd class="timeline-event-content" id="carsEX">
 
-                        <p>A flying car is hypothetical personal aircraft that provides door-to-door aerial transportation (e.g., from home to work or to the supermarket) as conveniently as a car but without the requirement for roads, runways or other specially-prepared operating areas.</p>
-                        <p>The flying car has been depicted in works of fantasy and science fiction such as The Jetsons, Star Wars, Blade Runner, Back to the Future Part II and The Fifth Element. The Jetsons took place in 2062.</p>
+                        <p>Breakfast will be served!.</p>
 
                     <br class="clear">
                     </dd><!-- /.timeline-event-content -->
