--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <li>
                         <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#partners">Partners</a>
+                    </li>
                     <!-- <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
