--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     TrainHacks is the first ever hackahton to take place on a train in Europe! 40 of the best developers from all around Europe will be carefully selected to revolutionize the world! An unforgettable journey, a massive launch party, incredible venues, and uncountable surprises are just a few of the things that the HackTrain will have on board! 
                 </p>
                 <p>
-                    Thanks to our strong parthenrship with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an excecutive First Class Journey!
+                    River Tam Thanks to our strong parthenrship with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an excecutive First Class Journey!
                 </p> 
                 <p>
                     Prototypes will be created and presented it in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of finding the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly be an unforgettable experience!
