--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- Timeline Dependencies -->
     <!-- <link rel="stylesheet" href="css/timeliner.css" type="text/css" media="screen"> -->
     <link rel="stylesheet" href="css/timeliner-future.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/flipclock.css" type="text/css" media="screen">
     <!-- <link rel="stylesheet" href="js/venobox.css" type="text/css" media="screen"> -->
 
     <!-- Custom Fonts -->
@@ -296,7 +297,8 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                <h1>THE JOURNEY</h1>
-               <h4>{ Will be announced on the 1st of Feb }
+               <h4>To be announced in:</h4>
+                <div class="clock" style="margin: auto auto;width: 650px"></div>
             </div>
         </div>
     </section>
@@ -610,6 +612,8 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script src="js/jquery.easing.min.js"></script>
+
+    <script src="js/flipclock.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
