--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>An Experience Like No Other.</h2>
                 <p>
-                    HackTrain is the first ever train hackahton in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionaize the world! 
+                    HackTrain is the first ever train hackahton in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world! 
                 </p>
                 <p>
-                    Thanks to our strong parthenrship with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an excecutive First Class Journey!
+                    Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an excecutive First Class Journey!
                 </p> 
                 <p>
                     Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
@@ -158,32 +158,32 @@
                 <h2>PARTNERS</h2>
                 <div class="container col-sm-12">
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://www.york.gov.uk/">
                             <img class="img-responsive" src="img/logo-york.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://www.eastmidlandstrains.co.uk/">
                             <img class="img-responsive" src="img/logo-emt.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://www.eastcoast.co.uk/">
                             <img class="img-responsive" src="img/logo-ec.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://hackaglobal.com/">
                             <img class="img-responsive" src="img/logo-hg.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://www.dotforgeaccelerator.com/">
                             <img class="img-responsive" src="img/logo-dotforge.png"/>
                         </a>
                     </div>
                     <div class="col-sm-4 img-container">
-                        <a href="">
+                        <a href="http://www.virgintrains.co.uk/">
                             <img class="img-responsive" src="img/logo-virgin-trains.png"/>
                         </a>
                     </div>
