--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                        <a class="page-scroll" href="#partners">Partners</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
@@ -81,10 +81,12 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li> 
                     <li>
-                        <a class="page-scroll" href="#map">Journey</a>
+                        <a class="page-scroll" href="#journey">Journey</a>
                     </li>
                     <li>
-                        <a class="page-scroll btn btn-info" href="#apply">Apply Now!</a>
+                        <a class="page-scroll btn btn-info" href="#apply">
+                            Apply Now!
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -118,10 +120,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>An Experience Like No Other.</h2>
                 <p>
-                    HackTrain is the first ever train hackahton in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world! 
+                    HackTrain is the first ever train hackathon in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world! 
                 </p>
                 <p>
-                    Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an excecutive First Class Journey!
+                    Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an executive First Class Journey!
                 </p> 
                 <p>
                     Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
@@ -143,14 +145,14 @@
         </div>
     </section>
 
-    <section id="sponsors" class="content-section text-center">
+    <!-- <section id="sponsors" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>SPONSORS</h2>
                 <h4><a href="mailito:river@dotforge.com">Become a sponsor</a></h4>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="partners" class="content-section text-center">
         <div class="row">
@@ -293,7 +295,7 @@
         </div>
     </section>
 
-    <section id="team" class="container content-section text-center">
+    <section id="journey" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                <h1>THE JOURNEY</h1>
