removed one train

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <img class="light" style="width: 70%" src="img/hacktrain-logo-white.png"/>
-                        <p class="intro-text">40 hackers, 1 train, 4 cities - 3 days to build revolutionary startups, whilst hacking on a train!</p>
+                        <p class="intro-text">40 hackers, 4 cities - 3 days to build revolutionary startups, whilst hacking on a train!</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
