--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
     </section> -->
 
-    <section id="partners" class="content-section text-center">
+    <section id="partners" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-12">
                 <h2>PARTNERS</h2>
