--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
         </div>
     </section> -->
 
-    <section id="apply" class="content-section text-center">
+    <section id="apply" class="container content-section text-center">
         <div id="type-form-parent" class="row">
             <h1>APPLY NOW!</h1>
-            <div class="col-md-6 col-md-offset-3" style="background: white; border-radius: 30px; padding: 10px 10px 10px 10px; height: 700px">
+            <div class="col-md-12" style="background: white; border-radius: 30px; padding: 10px 10px 10px 10px; height: 700px">
                 <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="" style="display:none;"></iframe>
             </div>
         </div>
