--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
     </section> -->
 
-    <section id="partners" class="container content-section text-center">
+    <section id="partners" class="container-wide content-section text-center">
         <div class="row">
             <div class="col-lg-12">
                 <h2>PARTNERS</h2>
@@ -242,11 +242,11 @@
         </div>
     </section>
 
-    <section id="team" class="container content-section text-center">
+    <section id="team" class="container-wide content-section text-center">
         <div class="row">
             <div class="col-sm-12">
                 <h2>MEET THE TEAM!</h2>
-                <div class="organizer col-md-4">
+                <div class="organizer col-md-3 col-sm-4">
                     <a href="https://www.linkedin.com/in/rivertam"><img src="img/river.jpg" alt="River Tam"/></a>
                     <h2 itemprop="name">River Tam<br></h2>
                     <ul itemprop="description" class="organizer-description">
@@ -261,7 +261,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="organizer col-md-4">
+                <div class="organizer col-md-3 col-sm-4">
                     <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/alejandro.jpg" alt="Alejandro Saucedo"/></a>
                     <h2 itemprop="name">Alejandro Saucedo</h2>
                     <ul itemprop="description" class="organizer-description">
@@ -277,7 +277,21 @@
                     </ul>
                     </ul>
                 </div>
-                <div class="organizer col-md-4">
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/profile/view?id=200767245"><img src="img/kosta.jpg" alt="Kosta Kolev"/></a>
+                    <h2 itemprop="name">Kosta Kolev</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Organized a multinational hackathon.</li>
+                        <li>Intern at Accenture.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">kolev1993@gmail.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
                     <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/sally.jpg" alt="Sally Kuok"/></a>
                     <h2 itemprop="name">Sally Kuok</h2>
                     <ul itemprop="description" class="organizer-description">
