--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
                 </p>
                 <p>
-                    Crazy? Definitely! Impossible? Not even close! Many individuals rocked our past events, creating mind blowing and revolutionary concepts! Some of our past events include <a href="http://uk.startupbus.org/">Startup Bus UK 2014</a>, <a href="http://moscow.startupweekend.org/">Startup Weekend Moscow</a>, <a href="https://twitter.com/startuphacksco/">Startup Hacks</a>.
+                    Crazy? Definitely! Impossible? Not even close! Many individuals rocked our past events, creating mind blowing and revolutionary concepts! Some of our past events include <a href="http://uk.startupbus.com/">Startup Bus UK 2014</a>, <a href="http://moscow.startupweekend.org/">Startup Weekend Moscow</a>, <a href="https://twitter.com/startuphacksco/">Startup Hacks</a>.
                 </p>
             </div>
             
