Small Aesthetic Changes
-Corrected the logo.
-Added description for Kosta.
-Changed the padding on the about section
-Commented out the google map

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img class="light" style="width: 70%" src="img/hacktrain-logo-white-dates.png"/>
+                        <img class="light" style="width: 70%; padding-top:80px" src="img/hacktrain-logo-white-dates.png"/>
                         <br><br><br>
                         <p class="intro-text">40 hackers, 4 cities - 3 days to build revolutionary startups, whilst hacking on a train!</p>
                         <a href="#about" class="btn btn-circle page-scroll">
@@ -283,7 +283,8 @@
                     <h2 itemprop="name">Kosta Kolev</h2>
                     <ul itemprop="description" class="organizer-description">
                         <li>Organized a multinational hackathon.</li>
-                        <li>Intern at Accenture.</li>
+                        <li>Managed multiple international events.</li>
+                        <li>Analyst at Accenture.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
@@ -622,7 +623,7 @@
 
     </div> -->
 
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
     <script src="js/jquery.js"></script>
 
