Journey has been added

--- a/index.html
+++ b/index.html
@@ -315,13 +315,13 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                <h1>THE JOURNEY</h1>
-               <h4>To be announced in:</h4>
-                <div class="clock" style="margin: auto auto;width: 650px"></div>
+               <!-- <h4>To be announced in:</h4>
+                <div class="clock" style="margin: auto auto;width: 650px"></div> -->
             </div>
         </div>
     </section>
 
-    <!-- <div class="container col-lg-10 col-lg-offset-1">
+    <div class="container col-lg-10 col-lg-offset-1">
         <div id="timeline" class="timeline-container">
             <button id="upper-timeline-toggle" class="timeline-toggle">+ expand all</button>
 
@@ -390,7 +390,7 @@
                         </div>
 
                         <blockquote>
-                            <p>Dinner will be served at the coworking space in Sheffield. Healthy options will certainly be available, but, like always, pizza and drinks will as well!</p>
+                            <p>Dinner will be served at the coworking space in Sheffield. Healthy options will certainly be available, but, like always, pizza and drinks will be there!</p>
                         </blockquote>
 
                     <br class="clear">
@@ -621,7 +621,7 @@
 
         </div>
 
-    </div> -->
+    </div>
 
     <!-- <div id="map"></div> -->
 
